syntax = "proto3";

package Proto.Command.Settings;

service SettingsCommandService {
  rpc CreateSettings (CreateSettingsCommand) returns (CommandResponse);
  rpc UpdateSettings (UpdateSettingsCommand) returns (CommandResponse);
}

message CreateSettingsCommand {
  string settingsId = 1;
  string exportPath = 2;
  bool isAddNewTicketsToCurrentSprintActive = 3;
}

message UpdateSettingsCommand {
  string settingsId = 1;
  string exportPath = 2;
  bool isAddNewTicketsToCurrentSprintActive = 3;
}

message CommandResponse {
  bool success = 1;
}
